<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Opop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_on">Bluetooth Activated</string>
    <string name="bluetooth_off">Bluetooth Disabled</string>
    <string name="search_hint">Rechercher</string>
    <string name="logout">Deconnexion</string>

    <string name="login">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="wrongLogInfo">Identifiants incorrectes</string>
    <string name="goodLogInfo">Connecté</string>
    <string name="connect">Entrer</string>
    <string name="connection">Connexion</string>
    <string name="signUp">S\'enregistrer</string>
    <string name="signUpWithFacebook">S\'inscrire avec\nFacebook</string>

    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="email">email</string>
    <string name="age">Age</string>
    <string name="profession">Profession</string>
    <string name="sex">Sex</string>
    <string name="account">Compte</string>
    <string name="search">Rechercher</string>
    <string name="borne">Voulez vous vous connecter à la borne ?</string>
    <string name="none">none</string>
    <string name="sample">sample</string>
    <string name="validate">Valider</string>

    <string name="sex_m">Homme</string>
    <string name="sex_f">Femme</string>
    <string name="enter_your_text">Tapez votre texte</string>
    <string name="send">Envoyer</string>
</resources>
