<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/background_Brown">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginRight="50dp">

            <ImageView
                android:id="@+id/signUpWithFacebookBt"
                android:src="@drawable/icone_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/signUpWithFacebookTxt"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/signUpWithFacebook"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/signUpBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icone_signup" />

            <TextView
                android:id="@+id/signUpTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="10sp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:paddingTop="50dp"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_LeftRightMargin"
        android:layout_marginRight="@dimen/login_LeftRightMargin"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icone_profil"
            android:background="@color/background_DarkBrown" />

        <EditText
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/login"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:background="@color/background_DarkBrown"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_LeftRightMargin"
        android:layout_marginRight="@dimen/login_LeftRightMargin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icone_cadena"
            android:background="@color/background_DarkBrown" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:password="true"
            android:textColor="@android:color/white"
            android:background="@color/background_DarkBrown"
            android:textColorHint="@android:color/white"
            android:padding="10dp"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

        <Button
            android:id="@+id/connect"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/connect"
            android:layout_gravity="bottom"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:background="@color/background_Yellow"
            android:minHeight="35dp" />
    </LinearLayout>

</LinearLayout>